# cookit

./: .gitignore  .gitmodules  CHANGELOG.md  ChangeLog  Makefile.in  README  README.md  TODO.md  build.sh  build.tcl  configure  helper.sh  installer.sh  license.terms  notes.md  release.sh
cookit/: Makefile.in  configure  configure.ac  pkgIndex.tcl.in
cookit/generic/: cookit.c  cookit.h  main.c
cookit/tclx/: INFO.txt
cookit/tclx/generic/: tclExtdInt.h  tclXutil.c
cookit/tclx/win/: tclXwinId.c
cookit/tests/: all.tcl  content.test  cookit-deps.test  cookit-tclx.test  cookit.test  helper.sh  helper.tcl  load.test  pkg_path.test  wzipvfs.test
cookit/tests/gui/: content.test  cookit-deps.test  pkg_path.test
cookit/tools/: gendeps.sh
cookit/tools/MacOS-X/: upx
cookit/tools/MacOS-X-x86_64/: upx
cookit/tools/i686-pc-linux-gnu/: upx
cookit/win/: cookit-dpiAware.admin.manifest.in  cookit-dpiAware.user.manifest.in  cookit.admin.manifest.in  cookit.admin.rc  cookit.user.manifest.in  cookit.user.rc  cookit8.admin.manifest.in  cookit8.user.manifest.in
parts/: cookfs.tcl  cookit.tcl  gd.tcl  memchan.tcl  openssl.tcl  resources.tcl  sqlite3.tcl  tbcload.tcl  tcl-itcl.tcl  tcl-tdbc.tcl  tcl.tcl  tclcompiler.tcl  tclgd.tcl  tcllib.tcl  tcltwofish.tcl  tcludp.tcl  tclx.tcl  tdom.tcl  thread.tcl  tilegtk.tcl  tileqt.tcl  tk.tcl  tktreectrl.tcl  tls.tcl  vfs.tcl  zlib.tcl
sources/cookit-1.0/: cookit.c  tclzlib.c
sources/resources-1.0/: cookit.exe.manifest  cookit_base.rc  resource-cookit-notk.rc  resource-cookit-tk.rc
src/: tcl-010-Windows-fix-CFLAGS.patch  tk-000-MacOS-X-fix-TKNSString.patch  tk-010-Windows-fix-CFLAGS.patch
src/ffidl/: GNUmakefile  GNUmakefile.in  config.status  configure  configure.in  ffidlConfig.h  ffidlConfig.h.in  pkgIndex.tcl
src/ffidl/doc/: ffidl.html
src/ffidl/generic/: ffidl.c
src/ffidl/lib-src/: libffi.diff
src/ffidl/libffi/: Makefile  config.status  libffi.la  libtool
src/installkit/: Makefile.in  configure  configure.ac  pkgIndex.tcl.in
src/installkit/generic/: LZMADecode.c  LZMADecode.h  crapvfs.c  crapvfs.h  installkit.c  main.c  tclExtdInt.h  tclExtend.h  tclXcmds.c  tclXunixPort.h  tclXutil.c  tclXwinPort.h  zlib.c  zvfs.c
src/installkit/tests/: all.tcl  content.test  ffidl.test  helper.sh  helper.tcl  installkit-compat.test  installkit-deps.test  installkit-tclx.test  installkit-windows.test  installkit.test  load.test  pkg_path.test  tcltest-2.3.2.tm  tkdnd.test  wzipvfs.test
src/installkit/tools/: buildkit.tcl  buildvfs.tcl  gendeps.sh  genkitstats.tcl
src/installkit/tools/Linux-x86/: upx
src/installkit/tools/Linux-x86_64/: upx
src/installkit/tools/MacOS-X/: upx
src/installkit/tools/MacOS-X-arm64/: upx
src/installkit/unix/: Makefile.in  tclXunixId.c  tclXunixOS.c
src/installkit/win/: Makefile.in  installkit-dpiAware.admin.manifest.in  installkit-dpiAware.user.manifest.in  installkit.admin.manifest.in  installkit.admin.rc  installkit.user.manifest.in  installkit.user.rc  tclXwinOS.c
src/installkit/win/rc/: installkit.admin.manifest  installkit.admin.manifest.in  installkit.admin.rc  installkit.user.manifest  installkit.user.manifest.in  installkit.user.rc  tk_base.rc
src/miniarc/: Makefile.in  configure  configure.in  pkgIndex.tcl.in
src/miniarc/generic/: crap.c  crap.h  miniarc.c  sha1.c  tar.h  zip.h
src/tcl/CVS/: Entries
src/tcl/doc/CVS/: Entries  (+1 more)
src/tcl/generic/: tclTomMath.h
src/tcl/libtommath/: bn_error.c  bn_fast_mp_invmod.c  bn_fast_mp_montgomery_reduce.c  bn_fast_s_mp_mul_high_digs.c  bn_mp_2expt.c  bn_mp_abs.c  bn_mp_addmod.c  bn_mp_cmp.c  bn_mp_cmp_d.c  bn_mp_cmp_mag.c  bn_mp_cnt_lsb.c  bn_mp_copy.c  bn_mp_count_bits.c  bn_mp_div_2d.c  bn_mp_dr_is_modulus.c  bn_mp_dr_reduce.c  bn_mp_dr_setup.c  bn_mp_exptmod.c  bn_mp_exptmod_fast.c  bn_mp_exteuclid.c  bn_mp_fread.c  bn_mp_fwrite.c  bn_mp_gcd.c  bn_mp_get_int.c  bn_mp_init_set_int.c  bn_mp_invmod.c  bn_mp_invmod_slow.c  bn_mp_is_square.c  bn_mp_jacobi.c  bn_mp_lcm.c  bn_mp_mod_2d.c  bn_mp_mod_d.c  bn_mp_montgomery_calc_normalization.c  bn_mp_montgomery_reduce.c  bn_mp_montgomery_setup.c  bn_mp_mul_2d.c  bn_mp_mulmod.c  bn_mp_n_root.c  bn_mp_neg.c  bn_mp_prime_fermat.c  (+30 more)
src/tcl/unix/: Makefile.in
src/tcl/win/: Makefile.in  configure
src/thread/: configure
src/thread/CVS/: Entries
src/tk/CVS/: Entries
src/tk/unix/: configure  configure.in
src/tk/win/: configure
src/tkdnd/: ChangeLog  Install.txt  Makefile.in  configure  configure.in
src/tkdnd/generic/: tkDND.c  tkDND.h  tkDNDBind.c
src/tkdnd/tclconfig/: tcl.m4
src/tkdnd/unix/: Cursors.h  Motif.c  XDND.c  XDND.h  tkXDND.c
src/tkdnd/unix/Motif/: Overview.html  README
src/tkdnd/unix/Motif/doc/: DragDrop.sgm  DragDrop.txt  PreRegister.txt
src/tkdnd/unix/Motif/lib/: Dnd.c  DndP.h  Makefile  Target.c
src/tkdnd/unix/Motif/programs/: Makefile  dnd.c
src/tkdnd/unix/Other/: Readme  XDND.c
src/tkdnd/unix/Other/xdnd-v4/: JXDNDChooseDropActionDialog.cc  JXDNDManager.cc  JXDNDManager.h  JXSelectionManager.cc  JXSelectionManager.h  README_source  jXUtil.cc  jXUtil.h
src/tkdnd/unix/Shape/: Makefile.in  configure  configure.in  pkgIndex.tcl  shape.c  tkAppInit.c
src/tkdnd/unix/Shape/demos/: dragger  fancytext  fingerprint
src/tkdnd/unix/Shape/doc/: shape.n
src/tkdnd/unix/Shape/images/: doc-mask.xbm  fingerprint.xbm  none.cur  ptr-mask.xbm
src/tkdnd/unix/Shape/include/: panic.h
src/tkdnd/win/: OleDND.cpp  OleDND.h  P_OleDND.cpp  Readme.txt  Version.rc  makefile.vc  tkOleDND.cpp  tkOleDND_TEnumFormatEtc.cpp  tkOleDND_TEnumFormatEtc.h  tkShape.cpp  tkdnd.sln  tkdnd.vcproj
src/tkdnd/win/VC-5.0/: tkdnd.dsp  tkdnd.dsw
src/tkdnd/win/VC-6.0/: tkdnd.dsp  tkdnd.dsw
src/tktable/tests/: all.tcl  tkTable.test
src/tools/: makezip.tcl
src/twapi/doc/: readme.txt
src/twapi/tests/: all.tcl  clipboard.test  com.test  disk.test  network.test  osinfo.test  process.test  security.test  services.test  shell.test  testutil.tcl  ui.test
src/zlib/: configure
tests/: all.tcl  build-daily.tcl  md5.test  sha256.test  test-daily.tcl  zipvfs.test
tools/: critcl  critcl.kit
(+300 files in other folders)
